--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "sharp": "^0.32.0"
   }
 }
